Change ReceiveAmount to UnspentAmount and returns all utxos
