# lnrpc/rpc.pb.gw.go
@@ -211,18 +211,18 @@ func request_Lightning_SubSwapClientWatch_0(ctx context.Context, marshaler runti
 }
 
 var (
-	filter_Lightning_ReceivedAmount_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+	filter_Lightning_UnspentAmount_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
 )
 
-func request_Lightning_ReceivedAmount_0(ctx context.Context, marshaler runtime.Marshaler, client LightningClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq ReceivedAmountRequest
+func request_Lightning_UnspentAmount_0(ctx context.Context, marshaler runtime.Marshaler, client LightningClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq UnspentAmountRequest
 	var metadata runtime.ServerMetadata
 
-	if err := runtime.PopulateQueryParameters(&protoReq, req.URL.Query(), filter_Lightning_ReceivedAmount_0); err != nil {
+	if err := runtime.PopulateQueryParameters(&protoReq, req.URL.Query(), filter_Lightning_UnspentAmount_0); err != nil {
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
-	msg, err := client.ReceivedAmount(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	msg, err := client.UnspentAmount(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
 
 }
@@ -1302,7 +1302,7 @@ func RegisterLightningHandlerClient(ctx context.Context, mux *runtime.ServeMux, 
 
 	})
 
-	mux.Handle("GET", pattern_Lightning_ReceivedAmount_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("GET", pattern_Lightning_UnspentAmount_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		if cn, ok := w.(http.CloseNotifier); ok {
@@ -1320,14 +1320,14 @@ func RegisterLightningHandlerClient(ctx context.Context, mux *runtime.ServeMux, 
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_Lightning_ReceivedAmount_0(rctx, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_Lightning_UnspentAmount_0(rctx, inboundMarshaler, client, req, pathParams)
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
 
-		forward_Lightning_ReceivedAmount_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_Lightning_UnspentAmount_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -2196,7 +2196,7 @@ var (
 
 	pattern_Lightning_SubSwapClientWatch_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "subswapclientwatch"}, ""))
 
-	pattern_Lightning_ReceivedAmount_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "receivedamount"}, ""))
+	pattern_Lightning_UnspentAmount_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "unspentamount"}, ""))
 
 	pattern_Lightning_SubSwapServiceRedeem_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "subswapserviceredeem"}, ""))
 
@@ -2278,7 +2278,7 @@ var (
 
 	forward_Lightning_SubSwapClientWatch_0 = runtime.ForwardResponseMessage
 
-	forward_Lightning_ReceivedAmount_0 = runtime.ForwardResponseMessage
+	forward_Lightning_UnspentAmount_0 = runtime.ForwardResponseMessage
 
 	forward_Lightning_SubSwapServiceRedeem_0 = runtime.ForwardResponseMessage
 
